[CSS Regions] It should be possible to specify ::BEFORE/AFTER as regions https://bugs.webkit.org/show_bug.cgi?id=90079

Patch by Andrei Bucur <abucur@adobe.com> on 2012-08-31
Reviewed by David Hyatt.

Source/WebCore:

The calls for RenderRegion::node() have been replaced with RenderRegion::generatingNode() to allow pseudo-elements to have RenderRegion renderers.
The compare function that establishes the region order was adapted to take into account pseudo-regions.
A renderer for the pseudo-element is now generated if it's a region even though there's no content property specified.

Test: fast/regions/content-flowed-into-pseudo-regions.html

* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::computeOverflowStateForRegions):
* rendering/RenderNamedFlowThread.cpp:
(WebCore::compareRenderRegions):
* rendering/RenderObjectChildList.cpp:
(WebCore::ensureBeforeAfterContainer):
(WebCore):
(WebCore::RenderObjectChildList::updateBeforeAfterContent):
* rendering/RenderRegion.cpp:
(WebCore::RenderRegion::nodeAtPoint):
(WebCore::RenderRegion::checkRegionStyle):
(WebCore::RenderRegion::computeStyleInRegion):
* rendering/RenderTreeAsText.cpp:
(WebCore::writeRenderNamedFlowThreads):

LayoutTests:

The new ref-test has a block with both a :before and :after pseudo-elements marked as regions.
In the block there's another region.

The test verifies the content is correctly flowed (the region order is respected) in the region chain:
:before region -> child region -> :after region

As a region a pseudo-element should also be displayed if there's no content property specified in the style sheet.

* fast/regions/content-flowed-into-pseudo-regions-expected.html: Added.
* fast/regions/content-flowed-into-pseudo-regions.html: Added.
* fast/regions/resources/region-style.css:
(.regionArticleAfter::after, .regionArticleBefore::before):
(.borderBoxNoFloat):

Canonical link: https://commits.webkit.org/113433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127269 268f45cc-cd09-0410-ab3c-d52691b4dbfc